...
                    }.padding()
                    Spacer()
                    Button {
                        showMap.toggle()
                    } label: {
                        Image(systemName: "map").foregroundColor(.main)
                    }.padding().accessibilityIdentifier("detailMapButton")
                    
                    VStack {
                        Button {
                            if viewModel.isFavourite {
                                viewModel.removeFavouriteAd()
                            } else {
                                viewModel.saveFavouriteAd()
                            }
                        } label: {
                            Image(systemName: (viewModel.isFavourite ? "star.fill" : "star")).foregroundColor(.red)
                        }
                        
                    }.padding().accessibilityIdentifier("detailFavouriteButton")
                    
                }
                Text(viewModel.adDetail?.propertyComment ?? "")
                    .font(.system(size: 15, weight: .light, design: .default))
                    .padding()
            }.onAppear {
...
