...
                           .foregroundColor(.black)
                           .offset(y: -35)
                   }
               }
        }
        .navigationBarTitleDisplayMode(.inline)
        .accessibilityIdentifier("mapView")
    }
}

struct AnnotationItem: Identifiable {
    let id = UUID()
    let coordinate: CLLocationCoordinate2D
...
